<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="wrap_content"
        android:layout_height="380dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/_2267483e8175f92741294aa4109ba87" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_below="@id/mainImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-64dp"
        android:importantForAccessibility="no"
        android:src="@drawable/icon" />

    <ImageView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="no"
        android:src="@drawable/title" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:importantForAccessibility="no"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        tools:text="@string/subscribe_now_label" />

    <TextView
        android:id="@+id/subtitlePricing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:importantForAccessibility="no"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:fontFamily="@font/roboto"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        tools:text="@string/tryal_label" />

    <Button
        android:id="@+id/buttonSubscribe"
        style="@style/CustomButton"
        android:layout_below="@id/subtitlePricing"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/subscribe" />

</RelativeLayout>